--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,16 +7,14 @@ body {
   font-family: "Stalinist One", sans-serif;
 
   width: 100%;
-  min-width: 360px;
+
   height: 100%;
   min-height: 100vh;
 
   display: grid;
   place-items: center;
-  background: var(--color-bg)
-    url(https://i.postimg.cc/hhFD7Nkf/apps-47636-13819498107583324-fb06b53a-4974-4acb-85e6-f6f363f85ab6-edec48d0-ec35-4a1f-8bf5-c455987b4a.png)
+  background: url(https://i.postimg.cc/hhFD7Nkf/apps-47636-13819498107583324-fb06b53a-4974-4acb-85e6-f6f363f85ab6-edec48d0-ec35-4a1f-8bf5-c455987b4a.png)
     repeat top center;
-
   font-size: 100%;
   color: var(--color-text);
 }
@@ -31,7 +29,7 @@ body {
 
 #wrapper {
   z-index: 1;
-  display: none;
+  visibility: hidden;
   position: relative;
 
   border-radius: var(--radius);
@@ -41,24 +39,22 @@ body {
   background: var(--canvas-bg);
 }
 
-#stats {
+#start {
   z-index: 2;
   position: absolute;
   max-width: 460px;
-  min-height: 460px;
+  max-height: 460px;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
   padding: 36px;
   border-radius: var(--radius);
-  background: linear-gradient(
-    to bottom,
-    rgba(32, 63, 109, 0.7) 0%,
-    rgba(63, 118, 201, 0.5) 50%,
-    rgb(32, 63, 109, 0.7) 100%
-  );
+  background:
+    linear-gradient(to bottom, rgba(32, 63, 109, 0.7) 0%, rgba(63, 118, 201, 0.4) 50%, rgb(32, 63, 109, 0.7) 100%),
+    url("./space.png") no-repeat center center / cover;
+
   box-shadow:
     inset -12px -12px 20px rgba(48, 98, 173, 0.8),
     inset 12px 12px 20px rgba(48, 98, 173, 0.8);
@@ -85,7 +81,7 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
-.levels {
+#levels {
   display: grid;
   padding: 24px;
   grid-template-columns: repeat(4, 1fr);
@@ -103,7 +99,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px 24px;
+  padding: 16px 24px;
 
   overflow: hidden;
   background-color: rgb(38, 163, 34);
@@ -116,7 +112,7 @@ body {
   transition: transform 0.3s ease 0s;
 
   &:disabled {
-    opacity: 0.5;
+    opacity: 0.6;
     cursor: not-allowed;
   }
 
@@ -125,12 +121,9 @@ body {
   }
 }
 
-#start:active {
-  transform: translate(2px, 1px);
-}
-
 #score,
 #lives {
+  user-select: none;
   position: absolute;
   top: 6px;
   font-size: 1.15rem;
@@ -166,12 +159,13 @@ body {
   gap: 12px;
   align-items: center;
   justify-content: center;
-  width: 220px;
+  width: 100%;
+  font-size: 1.25rem;
 
   &::before {
     content: "TOTAL SCORE:";
     color: rgb(230, 79, 10);
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
 }
 
@@ -181,5 +175,79 @@ body {
   }
   to {
     background-position: -100px 0;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  #start {
+    padding: 30px 24px 20px;
+    max-width: 360px;
+    max-height: 360px;
+  }
+
+  #title {
+    font-size: 2.25rem;
+  }
+
+  #levels {
+    padding: 0;
+  }
+
+  .levels__button {
+    padding: 12px 24px;
+  }
+
+  #score,
+  #lives {
+    top: 3px;
+    font-size: 0.75rem;
+  }
+
+  #score {
+    left: 8px;
+
+    &::before {
+      font-size: 0.75rem;
+    }
+  }
+
+  #lives {
+    right: 8px;
+
+    &::after {
+      font-size: 0.75rem;
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  #start {
+    max-width: 330px;
+  }
+
+  #title {
+    font-size: 2.25rem;
+  }
+}
+
+@media screen and (max-height: 540px) and (orientation: landscape) {
+  #start {
+    padding: 30px 16px 8px;
+    max-width: 360px;
+    max-height: 300px;
+  }
+
+  #title {
+    font-size: 2rem;
+  }
+
+  #levels {
+    padding: 0;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 8px;
+  }
+
+  .levels__button {
+    padding: 8px 12px;
   }
 }
