--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,65 +1,90 @@
-@forward "reset";
-@forward "variables";
+:root {
+  --color-bg: #07051b;
+  --color-button-bg: rgb(38 163 34);
+  --color-text: rgb(250 236 249);
+  --color-text-accent: rgb(230 79 10);
+  --canvas-bg: linear-gradient(to bottom, rgb(37 12 41 / 90%) 0%, rgb(11 16 66 / 40%) 50%, rgb(37 12 41 / 90%) 100%);
+  --radius: 16px;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+button {
+  color: inherit;
+  font: inherit;
+
+  border: none;
+}
 
 html,
 body {
   position: relative;
-  font-family: "Stalinist One", sans-serif;
-
-  width: 100%;
-
-  height: 100%;
-  min-height: 100vh;
 
   display: grid;
-  place-items: center;
-  background: url(https://i.postimg.cc/hhFD7Nkf/apps-47636-13819498107583324-fb06b53a-4974-4acb-85e6-f6f363f85ab6-edec48d0-ec35-4a1f-8bf5-c455987b4a.png)
-    repeat top center;
+  width: 100%;
+  height: 100%;
+
+  font-family: "Stalinist One", sans-serif;
   font-size: 100%;
+
+  background: url("https://i.postimg.cc/hhFD7Nkf/apps-47636-13819498107583324-fb06b53a-4974-4acb-85e6-f6f363f85ab6-edec48d0-ec35-4a1f-8bf5-c455987b4a.png")
+    repeat top center;
+  background-color: var(--color-bg);
+
+  min-height: 100vh;
+  place-items: center;
   color: var(--color-text);
 }
 
 .twinkling {
   position: absolute;
+
+  background: url("https://i.postimg.cc/CLpNr4PF/twinkling.png");
   inset: 0;
-  background-image: url(https://i.postimg.cc/CLpNr4PF/twinkling.png);
-  animation: 3s twinkle infinite;
-  animation-timing-function: linear;
+  animation: 3s twinkle infinite linear;
 }
 
 #wrapper {
-  z-index: 1;
-  visibility: hidden;
   position: relative;
+  z-index: 1;
 
   border-radius: var(--radius);
-  box-shadow:
-    inset -16px -16px 18px rgb(61, 17, 73, 0.6),
-    inset 16px 16px 18px rgba(61, 17, 73, 0.6);
+
   background: var(--canvas-bg);
+  visibility: hidden;
+  box-shadow:
+    inset -16px -16px 18px rgb(61 17 73 / 60%),
+    inset 16px 16px 18px rgb(61 17 73 / 60%);
 }
 
 #start {
-  z-index: 2;
   position: absolute;
-  max-width: 460px;
-  max-height: 460px;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 36px;
-  border-radius: var(--radius);
-  background:
-    linear-gradient(to bottom, rgba(32, 63, 109, 0.7) 0%, rgba(63, 118, 201, 0.4) 50%, rgb(32, 63, 109, 0.7) 100%),
-    url("./space.png") no-repeat center center / cover;
-
-  box-shadow:
-    inset -12px -12px 20px rgba(48, 98, 173, 0.8),
-    inset 12px 12px 20px rgba(48, 98, 173, 0.8);
   top: 50%;
   left: 50%;
+  z-index: 2;
+
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 36px;
+  border-radius: var(--radius);
+
+  background:
+    linear-gradient(to bottom, rgb(32 63 109 / 70%) 0%, rgb(63 118 201 / 40%) 50%, rgb(32 63 109 / 70%) 100%),
+    url("./space.png") no-repeat center center / cover;
+  max-width: 460px;
+  max-height: 460px;
+  flex-direction: column;
+  align-items: center;
+  box-shadow:
+    inset -12px -12px 20px rgb(48 98 173 / 80%),
+    inset 12px 12px 20px rgb(48 98 173 / 80%);
   transform: translate(-50%, -50%);
 }
 
@@ -69,15 +94,15 @@ body {
   transform: translateY(-50%);
 
   font-size: 2.8rem;
+
   background: linear-gradient(
     to bottom,
-    rgb(255, 253, 111) 0%,
-    rgb(241, 145, 20) 40%,
-    rgb(207, 30, 30) 80%,
-    rgb(207, 30, 30) 100%
+    rgb(255 253 111) 0%,
+    rgb(241 145 20) 40%,
+    rgb(207 30 30) 80%,
+    rgb(207 30 30) 100%
   );
   background-clip: text;
-
   -webkit-text-fill-color: transparent;
 }
 
@@ -89,26 +114,25 @@ body {
   margin-bottom: auto;
 }
 
-.levels__button {
-  color: inherit;
-  text-shadow: 2px 2px 4px rgba(56, 12, 47, 0.5);
-  cursor: pointer;
-
-  font: inherit;
-  font-size: 1.25rem;
+.levels-button {
   display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 16px 24px;
-
-  overflow: hidden;
-  background-color: rgb(38, 163, 34);
-  border-radius: var(--radius);
   border: none;
+  border-radius: var(--radius);
+
+  font-size: 1.25rem;
+
+  background-color: var(--color-button-bg);
+  color: inherit;
+  text-shadow: 2px 2px 4px rgb(56 12 47 / 50%);
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
   box-shadow:
-    3px 3px 6px rgba(12, 15, 56, 0.8),
-    inset -5px -5px 6px rgba(6, 54, 6, 0.8),
-    inset 5px 5px 6px rgba(115, 255, 0, 0.8);
+    3px 3px 6px rgb(12 15 56 / 80%),
+    inset -5px -5px 6px rgb(6 54 6 / 80%),
+    inset 5px 5px 6px rgb(115 255 0 / 80%);
   transition: transform 0.3s ease 0s;
 
   &:disabled {
@@ -123,12 +147,14 @@ body {
 
 #score,
 #lives {
-  user-select: none;
   position: absolute;
   top: 6px;
-  font-size: 1.15rem;
+
   display: none;
-  text-shadow: 2px 2px 4px rgba(56, 24, 12, 0.8);
+
+  font-size: 1.15rem;
+  user-select: none;
+  text-shadow: 2px 2px 4px rgb(56 24 12 / 80%);
   align-items: center;
   gap: 6px;
 }
@@ -138,8 +164,9 @@ body {
 
   &::before {
     content: "score = ";
+
     font-size: 1rem;
-    color: rgb(230, 79, 10);
+    color: var(--color-text-accent);
   }
 }
 
@@ -148,37 +175,43 @@ body {
 
   &::after {
     content: " x lives";
+
     font-size: 1rem;
-    color: rgb(230, 79, 10);
+    color: var(--color-text-accent);
   }
 }
 
 #total {
   position: relative;
+
   display: flex;
   gap: 12px;
   align-items: center;
   justify-content: center;
+
   width: 100%;
+
   font-size: 1.25rem;
 
   &::before {
     content: "TOTAL SCORE:";
-    color: rgb(230, 79, 10);
+    color: var(--color-text-accent);
+
     font-size: 1rem;
   }
 }
 
 @keyframes twinkle {
   from {
-    backrgound-position: 0;
+    background-position: 0;
   }
+
   to {
     background-position: -100px 0;
   }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (width <= 540px) {
   #start {
     padding: 30px 24px 20px;
     max-width: 360px;
@@ -193,13 +226,14 @@ body {
     padding: 0;
   }
 
-  .levels__button {
+  .levels-button {
     padding: 12px 24px;
   }
 
   #score,
   #lives {
     top: 3px;
+
     font-size: 0.75rem;
   }
 
@@ -220,7 +254,7 @@ body {
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (width <= 360px) {
   #start {
     max-width: 330px;
   }
@@ -230,7 +264,7 @@ body {
   }
 }
 
-@media screen and (max-height: 540px) and (orientation: landscape) {
+@media screen and (height <= 540px) and (orientation: landscape) {
   #start {
     padding: 30px 16px 8px;
     max-width: 360px;
@@ -247,7 +281,7 @@ body {
     gap: 8px;
   }
 
-  .levels__button {
+  .levels-button {
     padding: 8px 12px;
   }
 }
